[package]
name = "uniswap_fetcher_rs"
version = "0.1.9"
edition = "2021"
authors = ["venus1004@proton.me"]
description = "A Rust-based library to fetch and decode Uniswap V3 pool events, designed to be used as a Python module."
license = "MIT"
repository = "https://github.com/analyzify360/uniswap-fetcher-rs"
homepage = "https://github.com/analyzify360/uniswap-fetcher-rs"
readme = "README.md"
keywords = ["uniswap", "ethereum", "rust", "python", "pyo3"]
categories = ["cryptocurrency", "data-processing"]

[dependencies]
ethers = "2.0.14"
tokio = { version = "1.24", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.82"
ethers-abi = { version = "18.0.0"}
futures = "0.3.30"
reqwest = "0.12.7"
axum = "0.6.4"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
env_logger = "0.11.5"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
sha2 = "0.10.8"
num-bigint = "0.4.6"

[lib]
crate-type = ["cdylib"]

[dependencies.maturin]
version = "0.10.0"

[package.metadata.maturin]
name = "uniswap_fetcher_rs"
python-versions = ">=3.10 < 4.0"
